apps/f1-predictor/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: f1-predictor-dev
  labels:
    name: f1-predictor-dev
