apps/f1-predictor/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-predictor-ingress
  namespace: f1-predictor-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/hostname: f1.home.brettswift.com
    external-dns.alpha.kubernetes.io/target: home.brettswift.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - f1.home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: f1.home.brettswift.com
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: f1-mock-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f1-predictor
            port:
              number: 80
